// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination should only render with next button 1`] = `
<nav
  aria-label="pagination"
  className="Pagination right"
>
  <ul
    className="pagination"
  >
    <li
      className="page-item active"
      onClick={[Function]}
    >
      <button
        className="page-link"
      >
        1
      </button>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <button
        className="page-link"
      >
        2
      </button>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <button
        className="page-link"
      >
        3
      </button>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <button
        className="page-link"
      >
        4
      </button>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <button
        className="page-link"
      >
        5
      </button>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <button
        aria-label="Next"
        className="page-link"
      >
        <span
          aria-hidden="true"
          key="caret"
        >
          »
        </span>
        <span
          className="sr-only"
          key="sr"
        >
          Next
        </span>
      </button>
    </li>
  </ul>
</nav>
`;

exports[`Pagination should only render with previous button 1`] = `
<nav
  aria-label="pagination"
  className="Pagination right"
>
  <ul
    className="pagination"
  >
    <li
      className="page-item"
      onClick={[Function]}
    >
      <button
        aria-label="Previous"
        className="page-link"
      >
        <span
          aria-hidden="true"
          key="caret"
        >
          «
        </span>
        <span
          className="sr-only"
          key="sr"
        >
          Previous
        </span>
      </button>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <button
        className="page-link"
      >
        1
      </button>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <button
        className="page-link"
      >
        2
      </button>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <button
        className="page-link"
      >
        3
      </button>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <button
        className="page-link"
      >
        4
      </button>
    </li>
    <li
      className="page-item active"
      onClick={[Function]}
    >
      <button
        className="page-link"
      >
        5
      </button>
    </li>
  </ul>
</nav>
`;

exports[`Pagination should render correctly 1`] = `
<nav
  aria-label="pagination"
  className="Pagination right"
>
  <ul
    className="pagination"
  >
    <li
      className="page-item"
      onClick={[Function]}
    >
      <button
        aria-label="Previous"
        className="page-link"
      >
        <span
          aria-hidden="true"
          key="caret"
        >
          «
        </span>
        <span
          className="sr-only"
          key="sr"
        >
          Previous
        </span>
      </button>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <button
        className="page-link"
      >
        1
      </button>
    </li>
    <li
      className="page-item active"
      onClick={[Function]}
    >
      <button
        className="page-link"
      >
        2
      </button>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <button
        className="page-link"
      >
        3
      </button>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <button
        className="page-link"
      >
        4
      </button>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <button
        className="page-link"
      >
        5
      </button>
    </li>
    <li
      className="page-item"
      onClick={[Function]}
    >
      <button
        aria-label="Next"
        className="page-link"
      >
        <span
          aria-hidden="true"
          key="caret"
        >
          »
        </span>
        <span
          className="sr-only"
          key="sr"
        >
          Next
        </span>
      </button>
    </li>
  </ul>
</nav>
`;
